Finalize autoanchors with icon, adding .page-content to relevant templates, and scroll offset to prevent sticky nav overlapping the target headings

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -209,6 +209,17 @@ a.autoanchor {
   color: grey;
   font-size: 0.8em;
   margin-left: 0.5em;
+  background-image: url(/images/link-solid.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  color: transparent;
+  height: 24px;
+  width: 24px;
+  transform: translateY(2px);
+}
+
+.scroll-offset-for-sticky-nav {
+  scroll-margin-top: 100px;
 }
 
 html[dir="rtl"] a.autoanchor {
@@ -226,7 +237,7 @@ html[dir="rtl"] a.autoanchor {
     }
     &:hover {
       .autoanchor {
-        display: inline;
+        display: inline-block !important;
       }
     }
   }
